AUX_SOURCE_DIRECTORY(. DIR_PARSER)
AUX_SOURCE_DIRECTORY(./sql DIR_SQL)
AUX_SOURCE_DIRECTORY(./parser DIR_PAR)
AUX_SOURCE_DIRECTORY(./util DIR_UTIL)
ADD_LIBRARY ( ParserModule ${DIR_SQL} ${DIR_SQL} ${DIR_PAR} ${DIR_UTIL} SQLParserResult.cpp SQLParserResult.h)
ADD_SUBDIRECTORY(./parser)
ADD_SUBDIRECTORY(./util)
ADD_SUBDIRECTORY(./sql)
